--- a/views/players.ejs
+++ b/views/players.ejs
@@ -1,9 +1,32 @@
-<% include partials/header %>
+<% include ./partials/header %>
+<% players.forEach(function(players){ %>
 
-<h1>Tennis Legends</h1>
-
-<% players.forEach(function(player){ %>
-
+<div class="ui link cards centered">
+  <div class="card">
+    <div class="image">
+      <img src="https://static1.squarespace.com/static/56ba5828d210b8390263bb70/t/56c4e56d5559866496ce6bd6/1455744366134/love.jpg?format=500w">
+    </div>
+    <div class="content">
+      <div class="header"><%=players.name%></div>
+      <div class="meta">
+        <a href="/players/<%=players._id %>">Read More</a>
+      </div>
+      <div class="description">
+        <%=players.country%>
+      </div>
+    </div>
+    <div class="extra content">
+        
+      <span class="right floated"><p>Grand Slams:</p>
+        <%=players.grandslams%>
+      </span>
+      <span>
+        <i class="user icon"></i>
+        <%=players.age%> years old
+      </span>
+    </div>
+  </div>
+</div>
 <% }) %>
 
-<% include partials/footer %>
+<% include ./partials/footer %> 
