--- a/views/players.ejs
+++ b/views/players.ejs
@@ -1,4 +1,7 @@
 <% include ./partials/header %>
+<div class = "container">
+  <h1>The Tennis Hall of Fame</h1>
+</div>
 <% players.forEach(function(players){ %>
 
 <div class="ui link cards centered">
