--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,38 +1,28 @@
 <html>
 <title>My Tennis Player Legends App</title>
-    
-    <head>
-    <link rel=stylesheet href = "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
-    
-    </head>
-    <body>
-        
-        <div class="ui secondary menu blue">
-  <a class="active item" href='/players'>
-    Home
-  </a>
-  <a class="item" href='/players/new'>
-    New Player
-  </a>
-  <a class="item" href="/register">
-    Sign Up
-  </a>
-    <a class="item" href="/login">
-    Login
-  </a>
-            <a class="item" href="/quiz">
-    Quiz
-  </a>
-  <div class="right menu">
-    <div class="item">
-      <div class="ui icon input">
-        <input type="text" placeholder="Search...">
-        <i class="search link icon"></i>
+  <head>
+    <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
+  </head>
+  <body>     
+    <div class="ui secondary menu blue">
+      <a class="active item" href='/players'>
+        Home
+      </a>
+      <a class="item" href='/players/new'>
+        New Player
+      </a>
+      <a class="item" href="/register">
+        Sign Up
+      </a>
+      <a class="item" href="/login">
+        Login
+      </a>
+      <div class="right menu">
+        <div class="item">
+          <a class="ui item" href="/logout">
+            Logout
+          </a>
       </div>
     </div>
-    <a class="ui item" href="/logout">
-      Logout
-    </a>
   </div>
-</div>
     
